# terra-chess

./: .gitignore  Cargo.toml  NOTICE  README.md
artifacts/: checksums.txt  terra_chess.wasm
examples/: schema.rs
schema/: chess_move.json  execute_msg.json  query_msg.json
scripts/: Terra LCD.postman_collection.json  helpers.ts  main.ts  package-lock.json  package.json
src/: contract.rs  engine.rs  error.rs  lib.rs  msg.rs  state.rs
