[package]
name = "terra-chess"
version = "0.1.1"
authors = ["timbo"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
log="0.4.14"
cosmwasm-std = { version = "0.16.1" }
cosmwasm-storage = { version = "0.16.1" }
cw-storage-plus = "0.8.0"
cw-controllers = "0.8.1"
cw0 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
# chess = { git = "https://github.com/kalkins/rust_chess"}

[dev-dependencies]
cosmwasm-schema = { version = "0.16.1" }
env_logger="0.9.0"
